# tft-dash-essentials

./: .gitignore  CLAUDE.md  Makefile  README.md  README.txt  REFACTORING.md  SERIAL-PROTOCOL.md  SIMULATOR.md  TPMSTest  TPMSTest.cpp  build.sh  build.zig  parser.c  parser.h  testsdl  testsdl.cpp
3DModels/: BattCover1st.stl  CompactCoverV6.stl  TFTDashSideCoversV2.stl
HardwareGen3/: Schematic.brd  Schematic.sch  eagle.epf
HardwareGen4/: Gen4Board.brd  Gen4Board.sch
TFTDashDisplay/: testsdl.cpp
assets/: README.md
buildroot/: README.md  build.sh  external.desc  external.mk
buildroot-tftdash/: Config.in  README.md  build.sh
display/: .gitignore  CLAUDE.md  CMakeLists.txt  REFACTORING.md  SIMULATOR.md  build.zig  build.zig.zon
display/assets/: README.md
display/src/: TPMSTest.cpp  animation.c  animation.h  assets.c  assets.h  dashboard_anims.c  dashboard_anims.h  draw.c  draw.h  draw_dashboard.c  draw_dashboard.h  draw_menu.c  draw_menu.h  main.c  menu.c  menu.h  parser.c  parser.h  sensor_feed.c  sensor_feed.h  test_animation.c  test_assets.c  test_helpers.h  test_menu.c  test_parser.c  test_sensor_feed.c  test_tpms_feed.c  test_warnings.c  testsdl.c  testsdl.cpp  tpms_feed.c  tpms_feed.h  warnings.c  warnings.h
docs/: SERIAL-PROTOCOL.md  ab-update-plan.md  ota-update-plan.md  signal-reverse-engineering.md
firmware/: build.sh  firmware.ino
pi-image/: README.md  cmdline.txt  config.txt  fstab  rc.local  updatetft.sh
simulator/: TftDashSimulator.slnx
src/: assets.c  assets.h  parser.c  parser.h  test_parser.c  testsdl.cpp
(+52 files in other folders)
